feat: support DOMStorage, Cookie, Network, Log for hippy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,10 @@
     "strictPropertyInitialization": false,
     "removeComments": true,
     "noUnusedLocals": true,
-    "target": "ES5",
+    "target": "ES2015",
     "sourceMap": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
     "esModuleInterop": true,
     "lib": ["DOM", "ES2015"]
   },
