--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hippy/vanilla-js-devtools",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "Chrome devtools protocol JavaScript implementation",
   "main": "dist/index.js",
   "files": [
@@ -45,8 +45,6 @@
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^3.3.11",
-    "@hippy/react": "^2.14.0",
-    "@hippy/vue": "^2.14.0"
+    "webpack-cli": "^3.3.11"
   }
 }
